--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 header, footer {
-  background-color: #177064;
+  background-color: #1a7c6f;
   text-align: left;
 /*  min-width: 500px; */
 }
@@ -46,7 +46,7 @@ h2 {
   font-weight: 600;
   letter-spacing: 0.3px;
   text-align: left;
-  color: #1d4b0b;
+  color: #1a7c6f;
   padding: 10px 0px 10px 10px;
 }
 
@@ -87,7 +87,8 @@ font-family: 'Karla', sans-serif;
 }
 
 .myButton:hover {
-    background-color:#177064;
+    background-color: #1a7c6f;
+
 }
 
 .myButton:active {
