--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ h2 {
   font-weight: 600;
   letter-spacing: 0.3px;
   text-align: left;
-  color: #1a7c6f;
+  color: #165c13;
   padding: 10px 0px 10px 10px;
 }
 
@@ -107,7 +107,7 @@ font-family: 'Karla', sans-serif;
 }
 
 .c {
-  
+
 }
 
 .time {
