--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ h2 {
   letter-spacing: 0.3px;
   text-align: left;
   color: #165c13;
-  padding: 10px 0px 10px 10px;
+  padding: 0 20px 20px 20px;
 }
 
 img {
