--- a/css/game.css
+++ b/css/game.css
@@ -1,74 +1,73 @@
 /* game.css */
 body {
-    font-family: 'Karla', sans-serif;
-    background-color: #282828;
-    color: #ffffff;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-  }
-  
-  h2 {
-    font-family: 'Merriweather', serif;
-    font-weight: 600;
-    color: #ffffff;
-  }
-  
-  #downloadButton {
-    background-color: #082b0a;
-    color: #ffffff;
-    padding: 15px 30px;
-    border: none;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 18px;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s ease-in-out;
-  }
-  
-  #downloadButton:hover {
-    background-color: #082b0a;
-  }
-  
-  .image-container {
-    margin-top: 20px;
-    border: 2px solid #000000; /* Black border */
-    padding: 10px;
-    display: flex;
-    align-items: center;
-  }
-  
-  .game-image {
-    max-width: 50%;
-    margin-right: 20;
-    object-fit: cover; /* Maintain aspect ratio and cover container */
-    border-radius: 10px;
-  }
+  font-family: 'Karla', sans-serif;
+  background-color: #282828;
+  color: #ffffff;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
 
-  .instructions-container{
-    max-width: 50%;
-    text-align: center;
-  }
+h2 {
+  font-family: 'Merriweather', serif;
+  font-weight: 600;
+  color: #ffffff;
+}
 
-  .instructions-container h3 {
-    text-align: center;
-    font-size: 24px;
-  }
+#downloadButton {
+  background-color: #082b0a;
+  color: #ffffff;
+  padding: 15px 30px;
+  border: none;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease-in-out;
+}
 
-  .instructions-container p {
-    text-align: center;
-    font-size: 18px;
-  }
+#downloadButton:hover {
+  background-color: #082b0a;
+}
 
-  .instructions-container li {
-    text-align: left;
-    font-size: 16px;
-    margin-bottom: 8px;
-  }
+.image-container {
+  margin-top: 20px;
+  border: 2px solid #000000; /* Black border */
+  padding: 10px;
+  display: flex;
+  align-items: center;
+}
 
-  .list-icon {
-    width: 20px; /* Adjust the width as needed */
-    height: 20px; /* Adjust the height as needed */
-  }
-  
+.game-image {
+  max-width: 50%;
+  margin-right: 20px; /* Added px to margin-right */
+  object-fit: cover; /* Maintain aspect ratio and cover container */
+  border-radius: 10px;
+}
+
+.instructions-container {
+  flex: 1; /* Make the container take up remaining space */
+  text-align: center;
+}
+
+.instructions-container h3 {
+  text-align: center;
+  font-size: 24px;
+}
+
+.instructions-container p {
+  text-align: center;
+  font-size: 18px;
+}
+
+.instructions-container li {
+  text-align: left;
+  font-size: 16px;
+  margin-bottom: 8px;
+}
+
+.list-icon {
+  width: 20px; /* Adjust the width as needed */
+  height: 20px; /* Adjust the height as needed */
+}
