--- a/css/game.css
+++ b/css/game.css
@@ -51,19 +51,24 @@ h2 {
   text-align: center;
 }
 
-.instructions-container h3 {
+.instructions-container h2 {
   text-align: center;
   font-size: 24px;
 }
 
+.instructions-container h3 {
+  text-align: center;
+  font-size: 20px;
+}
+
 .instructions-container p {
   text-align: center;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .instructions-container li {
   text-align: left;
-  font-size: 16px;
+  font-size: 14px;
   margin-bottom: 8px;
 }
 
